Remove useFlag column (.R, .csv)

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ Plots/.DS_Store
 Sim-Data/.Rhistory
 
 NHANES-Analysis/nhanes_wrangle_sarah_files/figure-html/
+
+NHANES-Analysis/nhanes_wrangle_sarah.html
+
+NHANES-Analysis/nhanes_wrangle_sarah.Rmd
