Commit fact sheet on WWEIA

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ NHANES-Analysis/nhanes_wrangle_sarah_files/figure-html/
 NHANES-Analysis/nhanes_wrangle_sarah.html
 
 NHANES-Analysis/nhanes_wrangle_sarah.Rmd
+
+README_cache/gfm/
+
+README_files/figure-gfm/
+
+README.Rmd
